# GroupCodes

./: README.md
EnergyDecompGPAW/bader_analysis/: diff_charges.py  hftraj.py  hirsh.py  run_arya.sh
EnergyDecompGPAW/dipole_moment/: plot_dm_pulse.py  run_porul.sh  td.py
EnergyDecompGPAW/dos/mose2_4/: gs.py  ldos.py  plot_pdos.py  proj_dos_ao.py
EnergyDecompGPAW/energy_decomposition/: extract_plot_z.sh  run_arya.sh  run_porul.sh
EnergyDecompGPAW/energy_decomposition/analysis_tools/: energy.py  hcdist.py  indden.py  plot_tcm.py  tcm.py  wtpdist.py
EnergyDecompGPAW/energy_decomposition/longer_simulation/: extract_plot.sh  run_arya.sh  run_porul.sh
EnergyDecompGPAW/energy_decomposition/src/: argparse_util.py  (+19 more)
EnergyDecompGPAW/indden_t/: README  ind.py  ksdecomposition.py  rho.py  run_ind.sh  timedensitymatrix.py
EnergyDecompGPAW/rlx/: gen_trajtoxyz.py  opt.py  parallel_util.py  unrlx-mose2_4.xyz
GaussianCodes/: collect.py  g16io.py  get_energies.py  rung16.py  test.py
GuestHost/: polardomains.py  torsion.py  trajproc.py
GuestHost/package/: README.md  pyproject.toml
GuestHost/package/src/guesthost/: __init__.py  lattice.py  trajectory.py
GuestHost/package/src/guesthost/analysis/: functions_modules.py
GuestHost/package/tests/: test_create_fragments.py  test_lattice_orientations.py  test_lattice_torsions.py
GuestHost/package/tests/structures/: mpb.xyz  mpb_trajectory.xyz
TDQM/: .evolve.py.swp  evolve.in  evolve.py  fields.py  junk  laser.inp  propagators.py  qsystem.py
WannierCentres_F90/: inv3.f  polwf.f90  polwf.in  polwf_sp.f90  ucell_pol.xyz
(+59 files in other folders)
